examples/test/testpolicy10201.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10201
  namespace: namespace8
spec:
  podSelector:
    matchLabels:
      key42: value14
      key10: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value42
          key13: value31
      podSelector:
        matchLabels:
          key25: value17
          key29: value35
          key44: value23
